--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <form action="" method="post">
-<p>thomas,yan</p>
+<p>Digite seu nome</p>
 <input type="text" name="nome">
     </form>
 </body>
