--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
     <form action="" method="post">
 <p>Digite seu nome</p>
-<input type="text" name="nome">
+<input type="text" name="nome" placeholder="Thomas Yan">
 <input type="email" name="email">
-<input type="number" name="phone">
+<input type="number" name="phone" placeholder="(XX) XXXXX-XXXX">
     </form>
 </body>
 </html>
