--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
     <form action="" method="post">
 <p>Digite seu nome</p>
-<input type="text" name="nome" placeholder="Thomas Yan">
-<input type="email" name="email">
+<input type="text" name="nome" placeholder="Primeiro Nome">
+<input type="email" name="email" placeholder="Exemplo@gmail.com" value="@escola.pr.gov.br">
 <input type="number" name="phone" placeholder="(XX) XXXXX-XXXX">
     </form>
 </body>
