--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 <input type="text" name="nome" placeholder="Primeiro Nome">
 <input type="email" name="email" placeholder="Exemplo@gmail.com" value="@escola.pr.gov.br">
 <input type="number" name="phone" placeholder="(XX) XXXXX-XXXX">
+<input type="radio" name="student" value="Sim">Sim
+<input type="radio" name="student" value="Não">Não
     </form>
 </body>
 </html>
