--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <input type="number" name="phone" placeholder="(XX) XXXXX-XXXX">
 <input type="radio" name="student" value="Sim">Sim
 <input type="radio" name="student" value="Não">Não
+<input type="checkbox" name="novitades">Concordo com a política da empresa
     </form>
 </body>
 </html>
