--- a/index.html
+++ b/index.html
@@ -10,10 +10,23 @@
 <p>Digite seu nome</p>
 <input type="text" name="nome" placeholder="Primeiro Nome">
 <input type="email" name="email" placeholder="Exemplo@gmail.com" value="@escola.pr.gov.br">
-<input type="number" name="phone" placeholder="(XX) XXXXX-XXXX">
-<input type="radio" name="student" value="Sim">Sim
+<input type="number" name="phone" placeholder="(XX) XXXXX-XXXX"> 
+<input type="radio" name="student" value="Sim" checked>Sim
 <input type="radio" name="student" value="Não">Não
-<input type="checkbox" name="novitades">Concordo com a política da empresa
+
+
+<select name="Municipios" id="">
+    <option value="1">Curitiba</option>
+    <option value="2">Porto Alegre</option>
+    <option value="3">Florianopolis</option>
+</select>
+
+<textarea name="" id=""></textarea>
+
+
+
+
+<input type="checkbox" name="novitades" checked>Concordo com a política da empresa
     </form>
 </body>
 </html>
