--- a/index.html
+++ b/index.html
@@ -14,19 +14,21 @@
 <input type="radio" name="student" value="Sim" checked>Sim
 <input type="radio" name="student" value="Não">Não
 
-
+Municipios que recídie
 <select name="Municipios" id="">
     <option value="1">Curitiba</option>
     <option value="2">Porto Alegre</option>
     <option value="3">Florianopolis</option>
 </select>
-
+<p>Reclamação</p>
 <textarea name="" id=""></textarea>
 
 
 
 
 <input type="checkbox" name="novitades" checked>Concordo com a política da empresa
+<button type="submit">Enviar</button>
+<button type="reset">Apagar</button>
     </form>
 </body>
 </html>
