--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <form action="" method="post">
 <p>Digite seu nome</p>
-<input type="text" name="nome" placeholder="Primeiro Nome">
+<input type="text" name="nome" placeholder="Primeiro Nome" required>
 <input type="email" name="email" placeholder="Exemplo@gmail.com" value="@escola.pr.gov.br">
 <input type="number" name="phone" placeholder="(XX) XXXXX-XXXX"> 
 <input type="radio" name="student" value="Sim" checked>Sim
