--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 </head>
 <body>
     <form action="" method="post">
-<p>Digite seu nome</p>
+<p>Digite seu nome:</p>
 <input type="text" name="nome" placeholder="Primeiro Nome" required>
+<p>Digite seu Email:</p>
 <input type="email" name="email" placeholder="Exemplo@gmail.com" value="@escola.pr.gov.br">
+Número de Telefone:
 <input type="number" name="phone" placeholder="(XX) XXXXX-XXXX"> 
+<p>Estuda:</p>
 <input type="radio" name="student" value="Sim" checked>Sim
 <input type="radio" name="student" value="Não">Não
 
-Municipios que recídie
+Municipios que resídie
 <select name="Municipios" id="">
     <option value="1">Curitiba</option>
     <option value="2">Porto Alegre</option>
@@ -25,8 +28,9 @@ Municipios que recídie
 
 
 
-
+<p>Termos</p>
 <input type="checkbox" name="novitades" checked>Concordo com a política da empresa
+<p>Botões</p>
 <button type="submit">Enviar</button>
 <button type="reset">Apagar</button>
     </form>
