--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <form action="" method="post">
 <p>Digite seu nome:</p>
-<input type="text" name="nome" placeholder="Primeiro Nome" required>
+<input type="text" name="nome" placeholder="Nome:" required>
 <p>Digite seu Email:</p>
 <input type="email" name="email" placeholder="Exemplo@gmail.com" value="@escola.pr.gov.br">
 Número de Telefone:
@@ -23,7 +23,7 @@ Municipios que resídie
     <option value="2">Porto Alegre</option>
     <option value="3">Florianopolis</option>
 </select>
-<p>Reclamação</p>
+<p>Reclamações</p>
 <textarea name="" id=""></textarea>
 
 
