--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@ Número de Telefone:
 <p>Estuda:</p>
 <input type="radio" name="student" value="Sim" checked>Sim
 <input type="radio" name="student" value="Não">Não
-
-Municipios que resídie
+Municipios que resídie:
 <select name="Municipios" id="">
     <option value="1">Curitiba</option>
     <option value="2">Porto Alegre</option>
