--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <input type="text" name="nome" placeholder="Nome:" required>
 <p>Digite seu Email:</p>
 <input type="email" name="email" placeholder="Exemplo@gmail.com" value="@escola.pr.gov.br">
-Número de Telefone:
+<p>Número de Telefone:</p>
 <input type="number" name="phone" placeholder="(XX) XXXXX-XXXX"> 
 <p>Estuda:</p>
 <input type="radio" name="student" value="Sim" checked>Sim
