--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Formularios</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="https://formspree.io/f/xgvwyanq" method="post">
 <p>Digite seu nome:</p>
 <input type="text" name="nome" placeholder="Nome:" required>
 <p>Digite seu Email:</p>
